# ap_gen_tool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/json/: default_game_info.json  default_items.json  default_locations.json  default_world_info.json
assets/py/id1common/: __init__.py  options.py
data/: doom.data.json  doom2.data.json  heretic.data.json
games/: chex_quest.json  doom.game.json  doom.json  doom2.game.json  doom2.json  heretic.game.json  heretic.json
src/: CMakeLists.txt  data.cpp  data.h  generate.cpp  maps.cpp  maps.h  message.hpp  open_world.cpp  python.cpp  python.hpp  world_opts.cpp  zip.hpp
